# Box_AD

./: README.md  loginfo.txt  mystart.sh  package.xml  setup.cfg  setup.py  start_box_ad_ros2.sh  verify_avoidance_comparison.py
ROS2_Hybrid_A_Star/: CMakeLists.txt  FORWARD_ONLY_MODIFICATIONS.md  INTEGRATION.md  QUICKREF_NO_REVERSE.txt  QUICKSTART.sh  README.md  TESTING_GUIDE.md  package.xml  publish_test_poses.sh  run_test.sh  test_full.sh  test_performance.sh  test_topics.sh  verify_no_reverse.sh
ROS2_Hybrid_A_Star/config/: params.yaml
ROS2_Hybrid_A_Star/include/hybrid_a_star/: hybrid_a_star.h
ROS2_Hybrid_A_Star/install/: local_setup.sh  setup.sh
ROS2_Hybrid_A_Star/install/ros2_hybrid_a_star/include/hybrid_a_star/: hybrid_a_star.h  rs_path.h  state_node.h  type.h
ROS2_Hybrid_A_Star/install/ros2_hybrid_a_star/lib/ros2_hybrid_a_star/: hybrid_a_star_node
ROS2_Hybrid_A_Star/install/ros2_hybrid_a_star/share/ros2_hybrid_a_star/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2_Hybrid_A_Star/install/ros2_hybrid_a_star/share/ros2_hybrid_a_star/cmake/: ros2_hybrid_a_starConfig-version.cmake  ros2_hybrid_a_starConfig.cmake
ROS2_Hybrid_A_Star/install/ros2_hybrid_a_star/share/ros2_hybrid_a_star/config/: params.yaml
ROS2_Hybrid_A_Star/install/ros2_hybrid_a_star/share/ros2_hybrid_a_star/environment/: ament_prefix_path.dsv  path.dsv
ROS2_Hybrid_A_Star/launch/: hybrid_a_star.launch.py
ROS2_Hybrid_A_Star/log/: latest_build
ROS2_Hybrid_A_Star/src/: hybrid_a_star.cpp  hybrid_a_star_node.cpp
install/: local_setup.sh  setup.sh
logs/: gps.csv
(+37 files in other folders)
